--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,16 @@
     <string name="remove_rom">Remove ROM %d</string>
     <string name="system_image_size">System image size of ROM %d</string>
     <string name="system_image_size_summary">Create an own system image with custom size. WARNING this will remove your old system image.</string>
+    <string name="advanced_settings">Advanced Settings</string>
+    <string name="advanced_settings_summary">Do not use these options if you are running this ROM currently!</string>
     <string name="creating">Creating</string>
+    <string name="backup_rom">Backup ROM %d</string>
+    <string name="backup_name">Name of backup</string>
+    <string name="empty_name">Dude, name is blank!</string>
+    <string name="overwrite_backup">A backup with this name already exists. Do you want to overwrite it?</string>
+    <string name="backing_up">Backing up</string>
+    <string name="restore_rom">Restore ROM %d</string>
+    <string name="no_backup_found">No backups found for ROM %d</string>
+    <string name="restoring">Restoring</string>
 
 </resources>
