--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="advanced_settings">Advanced Settings</string>
     <string name="advanced_settings_summary">Do not use these options if you are running this ROM currently!</string>
     <string name="backup_rom">Backup ROM %d</string>
+    <string name="backup_rom_summary">Please only use lowercase for the name of the backup.</string>
     <string name="backup_name">Name of backup</string>
     <string name="empty_name">Dude, name is blank!</string>
     <string name="overwrite_backup">A backup with this name already exists. Do you want to overwrite it?</string>
