add a service which check for new Application versions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
     <string name="ok">Ok</string>
+    <string name="newappversion">New Application version!</string>
 
     <!-- Unit -->
     <string name="mb">MB</string>
